--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    
+    <header class="header"></header>
+
+    <main id="main">
+      <div class="wrapper">
+        <h1>Nice to meet you! I'm Adam Keyes.</h1>
+      </div>
+    </main>
+
+    <footer class="footer"></footer>
   </body>
 </html>
