Add responsive imgs to hero

--- a/index.html
+++ b/index.html
@@ -90,9 +90,34 @@
     </header>
 
     <main id="main">
-      <div class="wrapper">
-        <h1>Nice to meet you! I'm Adam Keyes.</h1>
-      </div>
+      <section class="hero">
+        <div class="wrapper hero__wrapper">
+          <picture class="hero__image">
+            <source
+              media="(min-width: 62.5em)"
+              srcset="assets/images/image-profile-desktop.webp"
+            />
+            <source
+              media="(min-width: 37.5em)"
+              srcset="assets/images/image-profile-tablet.webp"
+            />
+            <img
+              src="assets/images/image-profile-mobile.webp"
+              alt="Adam Keyes"
+              width="174"
+              height="343"
+            />
+          </picture>
+          <div class="hero__text">
+            <h1 class="hero__headline">Nice to meet you! I'm Adam Keyes.</h1>
+            <p class="hero__description">
+              Base in the UK, I'm a front-end developer passionate about
+              building accessible web apps that users love.
+            </p>
+            <a href="" class="hero__contact">Contact me</a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer"></footer>
